test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-27.xq
(:********* for ****************** for ** where ******** ne ******** let *******:) $  where 
(: Test: fooK-ForExprPositionalVar-27       for      for             :foo)
(: Written by: Frans Englich $    eq    where                          :) where 
(: Date: 2006-10-05T18:29:37+02:00          $   for       $        :
 for (: Purpose:Verify that the position is properly  $ computed for fn:subsequence( where ). :)
(:************foo** for ***foo**** for * where *****************foo***** ne ********:)
deep-equal( where (foo1, 2
	   for $i at $p
 eq 	   $   in subsequence((1, 2, 3, current-time)), 1,2)
	    return $p)